# super-spc

./: .gitignore  .impeccable.md  CLAUDE.md  DESIGN.html  DESIGN.md  README.md  README.zh-CN.md  TODOS.md  index.html  package-lock.json  package.json  pyproject.toml  server.js  super_spc.db-shm  vite.config.js
.claude/design/: 2026-04-01_design-chart-components-v1.md
algo/: __init__.py
algo/c_chart/: __init__.py  c_chart.py
algo/capability/: __init__.py  compute.py
algo/common/: __init__.py  attribute.py  enums.py  sigma.py  types.py  (+2 more)
api/: __init__.py  database.py  main.py  models.py  schemas.py
design/: algo-control-charts-design.md  algo-control-charts-plan.md  control-chart-pages.txt
plans/: architecture-refactor-plan.md  tier1-critical.md  tier2-required.md  tier3-parity.md  tier4-polish.md
src/: App.jsx  app.js  constants.js  helpers.js  legacy-boot.js  main.jsx  reconcile-params.js  styles.css
tests/: app-click-handler.test.js  app.render-contract.test.js  app.store.test.js  app.workflows.test.js  change-handler.test.js  chart-runtime-manager.test.js  chart-subscribers.test.js  click-handler.test.js  conftest.py  drag-runtime.test.js  forecast-prediction.test.js  forecast-view.test.js  keydown-handler.test.js  methodlab-view.test.js  prep-click-handler.test.js  prep-runtime.test.js  reconcile-params.test.js  state.test.js  test_api.js  test_capability.py  test_cusum_vmask.py  test_hotelling_t2.py  test_imr.py  test_levey_jennings.py  test_mewma.py  test_mr_chart.py  test_presummarize.py  test_properties.py  test_r_chart.py  test_run_chart.py  test_s_chart.py  test_transforms.js  test_xbar_r.py  test_xbar_s.py  ui-subscribers.test.js
(+247 files in other folders)
