[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-spc"
version = "0.1.0"
description = "Statistical Process Control application with algo engine and FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "attrs>=23.1",
    "scipy>=1.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.82",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]
report = [
    "weasyprint>=62",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["algo*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["algo", "api", ".git", "__pycache__", "node_modules", ".venv", ".hypothesis"]
